[tool.poetry]
name = "tombulled-param"
version = "0.1.8"
description = "Enhanced function parameters"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/param/"
repository = "https://github.com/tombulled/param"
keywords = ["python", "param"]
packages = [
    {include = "param"}
]

[tool.poetry.dependencies]
python = "^3.8"
roster = "^0.1.8"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true