[tool.poetry]
name = "tombulled-param"
version = "0.1.17"
description = "Enhanced function parameters"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/param/"
repository = "https://github.com/tombulled/param"
keywords = ["python", "param"]
packages = [
    {include = "param"}
]

[tool.poetry.dependencies]
python = "^3.8"
roster = "^0.1.8"
pydantic = "^2.3.0"
tombulled-arguments = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests/"