[tool.poetry]
name = "tombulled-param" # TODO: Update this with new name
version = "0.1.0"
description = "Metadata!"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/tombulled-param/" # TODO: Update this with new name
repository = "https://github.com/tombulled/param" # TODO: Update this with new name
keywords = ["python", "meta"]
packages = [
    {include = "meta"}
]

[tool.poetry.dependencies]
python = "^3.8"
roster = "^0.1.8"
pydantic = "^2.3.0"
tombulled-arguments = "^0.1.5"
annotated-types = "^0.6.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.isort]
profile = "black"
color_output = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
